--- a/game-leaning/styles/site-plan.css
+++ b/game-leaning/styles/site-plan.css
@@ -1,29 +1,31 @@
 /* if you are using any Google fonts change the font names below to your fonts. 
 Any spaces in your font name should be replaced with a +. 
 Fonts are separated by a | */
-@import url('https://fonts.googleapis.com/css?family=IM+Fell+French+Canon+SC|Lato');
-
+@import url('https://fonts.googleapis.com/css2?family=Orbitron&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Exo+2:wght@300&family=Orbitron&display=swap');
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: #396E94   ;
-  --secondary-color: #E7C24F ;
-  --accent1-color: #A42212;
-  --accent2-color: white;
+  --primary-color: #148c8c   ;
+  --secondary-color: #2c0434 ;
+  --accent1-color: #1f1586;
+  --accent2-color: #c4cad0
+  ;
 
   /* change the values below to your chosen font(s) */
-  --heading-font: "IM Fell French Canon SC";
-  --paragraph-font: Lato, Helvetica, sans-serif;
+  --heading-font: "Orbitron";
+  --paragraph-font: "Exo 2";
 
   /* these colors below should be chosen from among your palette colors above */
-  --headline-color-on-white: #396E94;  /* headlines on a white background */ 
-  --headline-color-on-color: white; /* headlines on a colored background */ 
-  --paragraph-color-on-white: #396E94; /* paragraph text on a white background */ 
-  --paragraph-color-on-color: white; /* paragraph text on a colored background */ 
-  --paragraph-background-color: #396E94  ;
-  --nav-link-color: #396E94;
-  --nav-background-color: #D4AC0D;
-  --nav-hover-link-color: white;
-  --nav-hover-background-color: #396E94;
+  --headline-color-on-white: #148c8c;  /* headlines on a white background */ 
+  --headline-color-on-color: #c4cad0
+  ; /* headlines on a colored background */ 
+  --paragraph-color-on-white: #148c8c; /* paragraph text on a white background */ 
+  --paragraph-color-on-color: #c4cad0; /* paragraph text on a colored background */ 
+  --paragraph-background-color: #148c8c  ;
+  --nav-link-color: #148c8c;
+  --nav-background-color: #2c0434;
+  --nav-hover-link-color: #c4cad0;
+  --nav-hover-background-color: #148c8c;
 }
 
 
