--- a/game-leaning/styles/site-plan.css
+++ b/game-leaning/styles/site-plan.css
@@ -8,7 +8,7 @@ Fonts are separated by a | */
   --primary-color: #148c8c   ;
   --secondary-color: #2c0434 ;
   --accent1-color: #1f1586;
-  --accent2-color: #c4cad0
+  --accent2-color: #e2df08
   ;
 
   /* change the values below to your chosen font(s) */
@@ -17,14 +17,14 @@ Fonts are separated by a | */
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #148c8c;  /* headlines on a white background */ 
-  --headline-color-on-color: #c4cad0
+  --headline-color-on-color: #e2df08
   ; /* headlines on a colored background */ 
   --paragraph-color-on-white: #148c8c; /* paragraph text on a white background */ 
-  --paragraph-color-on-color: #c4cad0; /* paragraph text on a colored background */ 
+  --paragraph-color-on-color: #e2df08; /* paragraph text on a colored background */ 
   --paragraph-background-color: #148c8c  ;
   --nav-link-color: #148c8c;
   --nav-background-color: #2c0434;
-  --nav-hover-link-color: #c4cad0;
+  --nav-hover-link-color: #e2df08;
   --nav-hover-background-color: #148c8c;
 }
 
