--- a/game-leaning/styles/game_styles.css
+++ b/game-leaning/styles/game_styles.css
@@ -55,10 +55,12 @@ h1.Home-Title{
 .design-pic{
    width: 100%;
     grid-row: 1/2;
+    justify-content: center;
 }
 .gaming-picture-img{
     border: 10px solid black;
     width: 96%;
+    
     
 }
 .game_summary{
@@ -73,6 +75,7 @@ h1.Home-Title{
 .engine-pic{
     width: 100%;
     grid-column: 2/3;
+    
 }
 #game-design-img{
     border: 10px solid black;
