--- a/game-leaning/styles/game_styles.css
+++ b/game-leaning/styles/game_styles.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Orbitron&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Exo+2:wght@300&family=Orbitron&display=swap');
 
+/** Nav CSS **/
 header{
     display: grid;
     grid-template-columns: 150px auto;
@@ -27,12 +28,52 @@ nav a {
 nav a:hover{
     color: #148c8c;
 }
+/**-- End Nav CSS --**/
 
+
+/**-- Logo Link CSS--**/
 img.logo{
     width: 200px;
     padding: 15px 15px;
-    margin-top: 0px;
-    
+    margin-top: 0px;  
+}
+div a{
+    text-decoration: none;
+}
+.logo{
+    opacity: 1;
+  display: block;
+  width: 100%;
+  height: auto;
+  transition: .5s ease;
+  backface-visibility: hidden;
+  
+}
+.middle {
+    text-decoration: none;
+    transition: .5s ease;
+    opacity: 0;
+    position: absolute;
+    top: 14.5%;
+    left: 1.5%;
+    transform: translate(0, 0);
+    -ms-transform: translate(0, 0);
+    text-align: center;
+    border: 5px solid rgb(255, 255, 255);
+    color: white;
+  }
+.container:hover .image {
+    opacity: 0.3;
+}
+.container:hover .middle {
+    opacity: 1;
+}
+.text {
+    text-decoration: none;
+    background-color: #148c8c;
+    color: black;
+    font-size: 16px;
+    padding: 16px 32px;
 }
 body{
     text-align: center;
@@ -43,6 +84,10 @@ body{
     background-color: #1f1586;
     color: white;
 }
+/**-- Logo Link CSS --**/
+
+
+
 /**-- Home CSS --**/
 .main-section{
    display: grid;
@@ -100,7 +145,9 @@ h1.Engine-Title{
 }
 /**-- End Home CSS --**/
 
-/**-- Game Engine --**/
+
+
+/**-- Game Engine CSS --**/
 .game_engine_main{
     display: grid;
     grid-template-columns: 1fr;
@@ -159,7 +206,98 @@ h3.unreal_games{
 .unreal_list{
     text-align: left;
 }
-/**-- End 
+/**-- End Game Engine CSS --*/
+
+
+
+
+/*-- Contact Us CSS */
+form {
+    /* Center the form on the page */
+    margin: 83px auto;
+    justify-content: center;
+    width: 500px;
+    /* Form outline */
+    padding: 1em;
+    border: 5px solid black;
+    border-radius: 1em;
+    background-color: #148c8c;
+  }
+  
+  ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+  
+  form li + li {
+    margin-top: 1em;
+  }
+  
+  label {
+    /* Uniform size & alignment */
+    display: inline-block;
+    width: 90px;
+    text-align: right;
+  }
+  
+  input,
+  textarea {
+    /* To make sure that all text fields have the same font settings
+       By default, textareas have a monospace font */
+    font: 1em sans-serif;
+  
+    /* Uniform text field size */
+    width: 300px;
+    box-sizing: border-box;
+  
+    /* Match form field borders */
+    border: 5px solid black;
+  }
+  
+  input:focus,
+  textarea:focus {
+    /* Additional highlight for focused elements */
+    border-color: #000;
+  }
+  
+  textarea {
+    /* Align multiline text fields with their labels */
+    vertical-align: top;
+  
+    /* Provide space to type some text */
+    height: 5em;
+  }
+  
+  .button {
+    /* Align buttons with the text fields */
+    padding-left: 90px; /* same size as the label elements */
+  }
+  
+  button {
+    /* This extra margin represent roughly the same space as the space
+       between the labels and their text fields */
+    margin-left: .5em;
+  }
+  
+  #feedback {
+      background-color: #41084d;
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      padding: 1em;
+      /* make this element invisible until we are ready for it */
+      display: none;       
+  }
+  .moveDown {
+      margin-top: 3em;
+  }
+/**-- End Contact Us --**/
+
+
+
+
 
 /**-- Footer CSS --**/
 section.msg{
@@ -205,4 +343,4 @@ footer{
     text-align: left;
     background-color: #2c0434;
 }
-
+/**-- End Footer CSS --**/
