--- a/game-leaning/styles/game_styles.css
+++ b/game-leaning/styles/game_styles.css
@@ -54,12 +54,11 @@ div a{
     transition: .5s ease;
     opacity: 0;
     position: absolute;
-    top: 14.5%;
-    left: 1.5%;
+    top: 13.5%;
+    left: 1.7%;
     transform: translate(0, 0);
     -ms-transform: translate(0, 0);
     text-align: center;
-    border: 5px solid rgb(255, 255, 255);
     color: white;
   }
 .container:hover .logo {
@@ -69,12 +68,16 @@ div a{
     text-decoration: none;
     opacity: 1;
 }
-.text {
+.text a{
     text-decoration: none;
     background-color: #148c8c;
-    color: black;
+    color: #e2df08;
     font-size: 16px;
-    padding: 16px 32px;
+    padding: 10px 10px;
+    border: 5px solid white;
+}
+.text a::selection{
+    color: black;
 }
 body{
     text-align: center;
@@ -97,6 +100,7 @@ body{
 
 h1.Home-Title{
     font-family: 'Orbitron';
+    color: #e2df08;
 }
 .design-pic{
     width: 100%;
@@ -131,7 +135,8 @@ h1.Home-Title{
 }
 
 h1.Engine-Title{
-    font-family: 'Orbitron'; 
+    font-family: 'Orbitron';
+    color: #e2df08; 
 }
 
 .engine_summary{
@@ -162,6 +167,7 @@ h1.Engine-Title{
 }
 h1.Unity-Title{
     font-family: 'Orbitron';
+    color: #e2df08;
 }
 .unity_information{
     background-color: #148c8c;
@@ -188,6 +194,7 @@ h3.unity_games{
 
 h1.Unreal-Engine-Title{
     font-family: 'Orbitron';
+    color: #e2df08;
 }
 
 .unreal_engine_information{
@@ -210,6 +217,235 @@ h3.unreal_games{
 /**-- End Game Engine CSS --*/
 
 
+
+/*-- Quiz Page CSS --*/
+
+.quiz_main{
+    display: grid;
+   grid-template-columns: 1fr 1fr; 
+}
+h1.Best-option{
+    font-family: 'Orbitron';
+    color: #e2df08;
+}
+
+#best-one{
+    background-color: #148c8c;
+    border: 10px solid black;
+    margin: 10px;
+    padding: 0 100px 0 100px;
+    line-height: 70px;
+    font-size: 30px;
+}
+
+/*-- End Quiz CSS --*/
+
+
+
+/*-- Quiz CSS --*/
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+
+
+main{
+    width: 100%;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: url('../assets/background_image.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+
+.game-quiz-container{
+    width: 40rem;
+    height: 30rem;
+    background-color: #20148c;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    border-radius: 30px;
+    border: 5px solid black;
+}
+
+.game-details-container{
+    width: 80%;
+    height: 4rem;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.game-details-container h1{
+    font-size: 1.2rem;
+}
+
+.game-question-container{
+    width: 80%;
+    height: 8rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 5px solid black;
+    border-radius: 25px;
+}
+
+.game-question-container h1{
+    font-size: 1.1rem;
+    text-align: center;
+    padding: 3px;
+}
+
+.game-options-container{
+    width: 80%;
+    height: 12rem;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.game-options-container span{
+    width: 45%;
+    height: 3rem;
+    border: 3px solid black;
+    border-radius: 20px;
+    overflow: hidden;
+}
+span label{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    transition: transform 0.3s;
+    font-weight: 600;
+    color: white;
+}
+
+span label:hover{
+    -ms-transform: scale(1.12);
+    -webkit-transform: scale(1.12);
+    transform: scale(1.12);
+    color: #e2df08;
+}
+
+input[type="radio"] {
+    position: relative;
+    display: none;
+}
+
+
+input[type=radio]:checked ~ .option {
+    background: #2c0434;
+}
+
+.next-button-container{
+    width: 50%;
+    height: 3rem;
+    display: flex;
+    justify-content: center;
+}
+.next-button-container button{
+    width: 8rem;
+    height: 2rem;
+    border-radius: 10px;
+    background: none;
+    color: white;
+    font-weight: 600;
+    border: 3px solid black;
+    cursor: pointer;
+    outline: none;
+}
+.next-button-container button:hover{
+    background-color: #e2df08;
+    color: #148c8c;
+}
+
+.modal-container{
+    display: none;
+    position: fixed;
+    z-index: 1; 
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%; 
+    overflow: auto; 
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0,0.4); 
+    flex-direction: column;
+    align-items: center;
+    justify-content: center; 
+    -webkit-animation: fadeIn 1.2s ease-in-out;
+    animation: fadeIn 1.2s ease-in-out;
+}
+
+.modal-content-container{
+    height: 20rem;
+    width: 25rem;
+    background-color: rgb(43, 42, 42);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    border-radius: 25px;
+}
+
+.modal-content-container h1{
+    font-size: 1.3rem;
+    height: 3rem;
+    color: lightgray;
+    text-align: center;
+}
+
+.grade-details{
+    width: 15rem;
+    height: 10rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.grade-details p{
+    color: white;
+    text-align: center;
+}
+
+.modal-button-container{
+    height: 2rem;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.modal-button-container button{
+    width: 10rem;
+    height: 2rem;
+    background: none;
+    outline: none;
+    border: 1px solid rgb(252, 242, 241);
+    color: white;
+    font-size: 1.1rem;
+    cursor: pointer;
+    border-radius: 20px;
+}
+.modal-button-container button:hover{
+    background-color: rgb(83, 82, 82);
+}
+
+
+/*-- End Quiz CSS --*/
 
 
 /*-- Contact Us CSS */
