--- a/game-leaning/styles/game_styles.css
+++ b/game-leaning/styles/game_styles.css
@@ -180,6 +180,7 @@ h1.Unity-Title{
 h3.unity_games{
     text-align: left;
     font-family: 'Orbitron';
+    color: #e2df08;
 }
 .unity_list{
     text-align: left;
@@ -209,6 +210,7 @@ h1.Unreal-Engine-Title{
 h3.unreal_games{
     font-family: 'Orbitron';
     text-align: left;
+    color: #e2df08;
 }
 
 .unreal_list{
