--- a/game-leaning/styles/game_styles.css
+++ b/game-leaning/styles/game_styles.css
@@ -173,7 +173,7 @@ h1.Unity-Title{
     background-color: #148c8c;
     border: 10px solid black;
     margin: 10px;
-    padding: 0 100px 0 100px;
+    padding: 40px 100px 40px 100px;
     line-height: 70px;
     font-size: 30px;
 }
@@ -202,7 +202,7 @@ h1.Unreal-Engine-Title{
     background-color: #148c8c;
     border: 10px solid black;
     margin: 10px;
-    padding: 0 100px 0 100px;
+    padding: 40px 100px 40px 100px;
     line-height: 70px;
     font-size: 30px;
 }
