--- a/game-leaning/styles/site-plan.css
+++ b/game-leaning/styles/site-plan.css
@@ -8,7 +8,7 @@ Fonts are separated by a | */
   --primary-color: #148c8c   ;
   --secondary-color: #2c0434 ;
   --accent1-color: #1f1586;
-  --accent2-color: #e2df08
+  --accent2-color: #e2df08;
   ;
 
   /* change the values below to your chosen font(s) */
